--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -449,54 +449,54 @@
     }
   },
   "seo": {
+    "defaultTitle": "GoldenMill - Промышленное оборудование и запасные части",
+    "defaultDescription": "GoldenMill - ведущий поставщик промышленного оборудования и запасных частей для грануляторов, миксеров и другого оборудования. Высокое качество, надежность и профессиональная поддержка.",
+    "defaultKeywords": "промышленное оборудование, запасные части, грануляторы, миксеры, LKE Group GmbH, GoldenMill",
     "home": {
-      "title": "GoldenMill - Промышленное оборудование и запчасти",
-      "description": "Высококачественное промышленное оборудование, запчасти и решения для пеллетных прессов и промышленных объектов. Экспертное производство с современными технологиями.",
-      "keywords": "промышленное оборудование, запчасти, пеллетные прессы, производство, промышленные решения"
-    },
-    "matrix": {
-      "title": "Матрицы для грануляторов | GoldenMill",
-      "description": "Профессиональные матрицы для грануляторов различных типов. Высокое качество изготовления, точная геометрия, длительный срок службы.",
-      "keywords": "матрицы для грануляторов, промышленные матрицы, запчасти для грануляторов"
-    },
-    "shell": {
-      "title": "Промышленные обечайки | GoldenMill",
-      "description": "Производство промышленных обечаек высокого качества. Индивидуальный подход, точное изготовление, надежность в эксплуатации.",
-      "keywords": "промышленные обечайки, производство обечаек, запчасти для оборудования"
+      "title": "GoldenMill - Промышленное оборудование и запасные части",
+      "description": "GoldenMill - ведущий поставщик промышленного оборудования и запасных частей для грануляторов, миксеров и другого оборудования. Высокое качество, надежность и профессиональная поддержка.",
+      "keywords": "промышленное оборудование, запасные части, грануляторы, миксеры, LKE Group GmbH, GoldenMill"
     },
     "about": {
-      "title": "О компании GoldenMill",
-      "description": "GoldenMill - ведущий производитель промышленного оборудования и запчастей. Узнайте о нашей истории, миссии и стремлении к качеству.",
-      "keywords": "о компании GoldenMill, история компании, миссия, производство оборудования"
+      "title": "О компании GoldenMill - LKE Group GmbH",
+      "description": "Узнайте о компании GoldenMill - LKE Group GmbH, нашем опыте в производстве промышленного оборудования и запасных частей, а также о нашей миссии и ценностях.",
+      "keywords": "о компании, история, миссия, ценности, LKE Group GmbH, GoldenMill, промышленное оборудование"
     },
     "contacts": {
-      "title": "Контакты | GoldenMill",
-      "description": "Свяжитесь с GoldenMill для заказа оборудования и запчастей. Профессиональная консультация, индивидуальный подход к каждому клиенту.",
-      "keywords": "контакты GoldenMill, заказ оборудования, консультация"
-    },
-    "serviceInformation": {
-      "title": "Сервисная информация | GoldenMill",
-      "description": "Важная информация о сервисе и обслуживании оборудования GoldenMill. Рекомендации по эксплуатации и техническому обслуживанию.",
-      "keywords": "сервисная информация, обслуживание оборудования, техническая поддержка"
-    },
-    "privacyPolicy": {
-      "title": "Политика конфиденциальности | GoldenMill",
-      "description": "Политика конфиденциальности GoldenMill. Информация об обработке персональных данных и защите конфиденциальности пользователей.",
-      "keywords": "политика конфиденциальности, защита данных, персональные данные"
+      "title": "Контакты GoldenMill - Свяжитесь с нами",
+      "description": "Свяжитесь с GoldenMill для получения информации о промышленном оборудовании и запасных частях. Наши специалисты готовы ответить на все ваши вопросы.",
+      "keywords": "контакты, связь, обратная связь, LKE Group GmbH, GoldenMill, промышленное оборудование"
     },
     "product": {
-      "title": "{{productName}} | Промышленное оборудование",
-      "description": "{{productDescription}}. Высококачественное промышленное оборудование от GoldenMill. Категория: {{category}}",
-      "keywords": "{{productName}}, промышленное оборудование, {{category}}, производство, запчасти"
+      "title": "{{productName}} - GoldenMill",
+      "description": "{{productDescription}}",
+      "keywords": "{{productName}}, {{category}}, промышленное оборудование, запасные части, LKE Group GmbH, GoldenMill"
     },
-    "spare-parts": {
-      "title": "Запасные части | GoldenMill - Высококачественное промышленное оборудование",
-      "description": "Исследуйте наш широкий ассортимент высококачественных запасных частей для промышленного оборудования. Индивидуальные решения для грануляторов и другого оборудования.",
-      "keywords": "запасные части, промышленное оборудование, грануляторы, матрицы, обечайки, промышленные установки, грануляция, GoldenMill"
+    "granulator": {
+      "title": "Грануляторы - GoldenMill",
+      "description": "Высококачественные грануляторы для различных отраслей промышленности. Надежное оборудование от GoldenMill для эффективного производства гранул.",
+      "keywords": "грануляторы, гранулирование, промышленное оборудование, LKE Group GmbH, GoldenMill"
     },
-    "defaultTitle": "GoldenMill - Промышленное оборудование и запасные части",
-    "defaultDescription": "Высококачественное промышленное оборудование, запасные части и решения для грануляторов и промышленных объектов. Экспертное производство с использованием современных технологий.",
-    "defaultKeywords": "промышленное оборудование, запасные части, грануляторы, производство, промышленные решения"
+    "mixer": {
+      "title": "Миксеры - GoldenMill",
+      "description": "Профессиональные миксеры для промышленного использования. Надежное оборудование от GoldenMill для эффективного смешивания различных материалов.",
+      "keywords": "миксеры, смешивание, промышленное оборудование, LKE Group GmbH, GoldenMill"
+    },
+    "serviceInformation": {
+      "title": "Информация об обслуживании - GoldenMill",
+      "description": "Подробная информация об обслуживании промышленного оборудования GoldenMill. Гарантийное обслуживание, техническая поддержка и консультации.",
+      "keywords": "обслуживание, гарантия, техническая поддержка, LKE Group GmbH, GoldenMill, промышленное оборудование"
+    },
+    "privacyPolicy": {
+      "title": "Политика конфиденциальности - GoldenMill",
+      "description": "Политика конфиденциальности GoldenMill. Информация о том, как мы собираем, используем и защищаем ваши персональные данные.",
+      "keywords": "политика конфиденциальности, персональные данные, конфиденциальность, LKE Group GmbH, GoldenMill"
+    },
+    "pageNotFound": {
+      "title": "Страница не найдена - GoldenMill",
+      "description": "Запрашиваемая страница не найдена. Пожалуйста, вернитесь на главную страницу GoldenMill.",
+      "keywords": "404, страница не найдена, ошибка, GoldenMill, LKE Group GmbH"
+    }
   },
   "emailContent": {
     "subject": "Новая заявка с сайта",
