i was kicked out from dev

--- a/src/components/translation/en.json
+++ b/src/components/translation/en.json
@@ -45,7 +45,7 @@
   "mixerTitle": "Mixer",
   "mixerSubtitle": "GM-520",
   "navBar": {
-    "main": "Main Page",
+    "main": "Main",
     "products": "Products",
     "about": "About Company",
     "contacts": "Contact",
