--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -71,8 +71,8 @@
       "granulation": "Granulierung",
       "type": "Typ",
       "productType": "Produkttyp",
-      "granulators": "Matrizen",
-      "mixers": "Gehäuse",
+      "granulators": "Granulatoren",
+      "mixers": "Mischer",
       "spare-parts": "Ersatzteile",
       "applicationsTitle": "Anwendungsbereiche",
       "select": "Auswählen",
@@ -108,8 +108,8 @@
     "learnMore": "Mehr erfahren",
     "contact": "Kontakt",
     "all": "Alle",
-    "matrices": "Matrizen",
-    "shells": "Gehäuse",
+    "matrices": "Granulatoren",
+    "shells": "Mischer",
     "spareParts": "Ersatzteile",
     "noResults": "Keine Ergebnisse für Ihre Suche gefunden",
     "manufacturingHint": "Fertigungshinweis",
