--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -58,6 +58,8 @@
     "learnMore": "Подробнее",
     "contact": "Связаться",
     "all": "Все",
+    "matrices": "Грануляторы",
+    "shells": "Миксеры",
     "granulators": "Грануляторы",
     "mixers": "Миксеры",
     "spare-parts": "Запчасти",
