first try with SEO

--- a/seo-reports/seo-report-20250523-162513.md
+++ b/seo-reports/seo-report-20250523-162513.md
@@ -1,7 +1,7 @@
-# SEO отчет от пятница, 23 мая 2025 г. 15:16:35 (+07)
+# SEO отчет от пятница, 23 мая 2025 г. 16:25:15 (+07)
 ## Основные метрики
 URL проверки: http://localhost:3000
-Время проверки: пятница, 23 мая 2025 г. 15:16:35 (+07)
+Время проверки: пятница, 23 мая 2025 г. 16:25:15 (+07)
 
 ## Проверка базовых мета-тегов
 ### Статические мета-теги:
@@ -9,20 +9,20 @@ URL проверки: http://localhost:3000
 - <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
 - <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 - <meta name="format-detection" content="telephone=no" />
-- <meta name="description" content="GoldenMill - Your trusted partner in business solutions. We provide comprehensive services for your success." />
-- <meta name="keywords" content="GoldenMill, business solutions, consulting, services" />
+- <meta name="description" content="GOLDENMILL supplies technical spare parts for industrial equipment, including dies, mixers, rollers for pellet mills, eccentric shafts, hammers, and more." />
+- <meta name="keywords" content="industrial equipment, spare parts, dies, shells, mixers, rollers, pellet mills" />
 - <meta name="author" content="GoldenMill" />
 - <meta name="robots" content="index, follow" />
 - <meta property="og:type" content="website" />
-- <meta property="og:url" content="https://goldenmill.com/" />
-- <meta property="og:title" content="GoldenMill - Your Trusted Partner" />
-- <meta property="og:description" content="GoldenMill - Your trusted partner in business solutions. We provide comprehensive services for your success." />
-- <meta property="og:image" content="/og-image.jpg" />
+- <meta property="og:url" content="https://goldenmill.de/" />
+- <meta property="og:title" content="Golden Mill - Industrial Equipment Parts" />
+- <meta property="og:description" content="GOLDENMILL supplies technical spare parts for industrial equipment, including dies, mixers, rollers for pellet mills, eccentric shafts, hammers, and more." />
+- <meta property="og:image" content="/logo.svg" />
 - <meta property="twitter:card" content="summary_large_image" />
-- <meta property="twitter:url" content="https://goldenmill.com/" />
-- <meta property="twitter:title" content="GoldenMill - Your Trusted Partner" />
-- <meta property="twitter:description" content="GoldenMill - Your trusted partner in business solutions. We provide comprehensive services for your success." />
-- <meta property="twitter:image" content="/og-image.jpg" />
+- <meta property="twitter:url" content="https://goldenmill.de/" />
+- <meta property="twitter:title" content="Golden Mill - Industrial Equipment Parts" />
+- <meta property="twitter:description" content="GOLDENMILL supplies technical spare parts for industrial equipment, including dies, mixers, rollers for pellet mills, eccentric shafts, hammers, and more." />
+- <meta property="twitter:image" content="/logo.svg" />
 - <meta name="theme-color" content="#ffffff" />
 - <meta name="apple-mobile-web-app-capable" content="yes" />
 - <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -206,4 +206,4 @@ URL проверки: http://localhost:3000
 
 ## Проверка производительности
 ### Результаты Lighthouse:
-✅ Отчет Lighthouse сохранен в seo-reports/lighthouse-20250523-151630.json
+✅ Отчет Lighthouse сохранен в seo-reports/lighthouse-20250523-162513.json
